# tbgpt

./: .env.example  .gitignore  LICENSE  README.md  app.py  htmlTemplates.py  pyproject.toml  requirements.txt
hansard/: download_pdfs.py  records_download.py
pinecone/: pinecone.ipynb
