[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Felipe Cabral", email = "felipe.benites@gmail.com"},
]
dependencies = [
    "langchain>=0.0.270",
    "PyPDF2",
    "python-dotenv",
    "streamlit",
    "openai",
    "faiss-cpu",
    "altair",
    "tiktoken",
    "huggingface-hub",
    "InstructorEmbedding>=1.0.1",
    "sentence-transformers>=2.2.2",
    "datetime>=5.2",
    "selenium>=4.11.2",
    "pdfminer-six>=20221105",
    "pinecone-client>=2.2.4",
    "uuid>=1.30",
    "pypdf>=3.16.2",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.scripts]
app = "streamlit run app.py"
notebook = "jupyter lab --app-dir /home/cabral/tbot/__pypackages__/3.11/lib/jupyterlab"

[tool.pdm.dev-dependencies]
notebook = [
    "jupyter>=1.0.0",
]
